preSigil-0.9.6
   Bug Fixes
    - Make StdWarningDialog resizeable when "Show Details" is used
    - Fix CleanSource svg prefix removal bug that sometimes broke valid svg code 
    - Remove svg image and html5 menuitem from the list of void elements in the Sigil and plugin code
    - Properly xml escape "&" in metadata attribute values
    - Properly perform source updates on epub load even when they do not follow recommended spec
    - Make handling of comments in both xhtml and xml more roubst
    - Properly url escape css file names to handle css files with spaces in them
    - Try to make direct editing of content.opf more safe by auto-fixing errors when possible
    - Properly handle WellFormed checks for pure XML in XMLResource.cpp by using embedded python3 lxml
    - Make opf_newparser.py and xmlprocessor.py more robust to broken user input in content.opf
    - Make ProcessXML (repairXML in xmlprocessor.py) - leave untouched anything well-formed
    - Fix thinko in plugin bookcontainer.py and outputcontainer.py contributed by wrCisco 
    - Fix for improper encoding in plugins on Mac OS X due to missing inherited plugin environment
    - Fix for typos in epub xmlns when splitting epub3 ebooks in BookView
    - Update testplugin_v012.zip to testplugin_v013.zip to handle sgc-nav.css new feature
    - Fix bugs in DeleteUnusedStyles when selector exists more than once in the same stylesheet
    - Fix bugs in DeleteUnusedStyles when group selectors span more than one line
    - Fix bugs in Reports: CSS Styles missing cases when selector exists more than once
    - Fix bug in Reports: All Files to use Landmark Semantics under epub3 not guide semantics
    - Fix bug, slow in loading ini when too large clipboard history, user can delete them via dialog
    - Stop cosmetic double-spaces being introduced into OPF manifest, spine and guide entries
    - Fix bug when user selects too much in BookView and then tries to change case